# Malpulse

./: README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml  requirements.txt
backend/src/: App.tsx  main.py
backend/src/agents/: fulfillment_coordinator.py  inventory_locator.py  shopper_intel.py  supervisor.py
backend/src/api/routes/: routes.py
backend/src/core/: config.py  logger.py
backend/src/db/: mongodb.py
backend/src/mcp_server/: server.py
backend/tests/: test_reserve.py  test_search.py
frontend/src/: server.ts  types.ts
frontend/src/components/: AgentTerminal.tsx  CheckoutModal.tsx  InventoryView.tsx  MapView.tsx
infrastructure/terraform/: main.tf
scripts/: generate_qr.py  seed_mock_data.py
